# suil

./: .gitignore  3rdParty.cmake  CMakeLists.txt  Catch.cmake  README.md  spx
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cmake/: Config.cmake.in  Suil.cmake  (+13 more)
libs/base/: CMakeLists.txt
libs/base/examples/: .cmake  main.cpp
libs/base/generator/: .cmake  meta.cpp  meta.hpp
libs/base/generator/example/: demo.scc  demo.scc.cpp  demo.scc.hpp  main.cpp
libs/base/include/suil/base/: args.hpp  atomic.hpp  base64.hpp  blob.hpp  buffer.hpp  channel.hpp  console.hpp  crypto.hpp  data.hpp  datetime.hpp  dtoa_milo.hpp  encryption.hpp  env.hpp  exception.hpp  file.hpp  hash.hpp  ipc.hpp  json.hpp  logging.hpp  meta.hpp  mime.hpp  mustache.hpp  notify.hpp  process.hpp  regex.hpp  result.hpp  secp256k1.hpp  signal.hpp  sio.hpp  string.hpp  symbols.hpp  syson.hpp  thread.hpp  union.hpp  units.hpp  url.hpp  utils.hpp  uuid.hpp  varint.hpp  wire.hpp
libs/base/include/suil/base/c/: args.h  common.h
libs/base/src/: argp.cpp  args.c  args.cpp  base64.cpp  buffer.cpp  channel.cpp  console.cpp  crypto.cpp  data.cpp  datetime.cpp  encryption.cpp  env.cpp  exception.cpp  file.cpp  hash.cpp  ipc.cpp  json.cpp  logging.cpp  mime.cpp  mustache.cpp  notify.cpp  process.cpp  regex.cpp  result.cpp  secpk2561.cpp  signal.cpp  string.cpp  syson.cpp  union.cpp  units.cpp  url.cpp  utils.cpp  uuid.cpp  varint.cpp  wire.cpp
libs/base/test/: main.cpp  test.hpp
libs/database/: CMakeLists.txt
libs/database/examples/: .cmake  data.scc
libs/database/examples/postgres/: main.cpp
libs/database/examples/redis/: main.cpp
libs/database/include/suil/db/: orm.hpp  pgsql.hpp  redis.hpp
libs/database/scc/: config.scc  symbols.scc
libs/database/src/: pgsql.cpp  redis.cpp
libs/http/: CMakeLists.txt  Client.cmake  Server.cmake
libs/http/example/: .cmake
libs/http/example/basic/: main.cpp
libs/http/example/client/: main.cpp
libs/http/example/server/: admin.http  args.c  http-client.env.json  main.cpp  test.rest
libs/http/example/server/www/: index.html
libs/http/include/suil/http/: common.hpp  cookie.hpp  jwt.hpp  offload.hpp  parser.hpp  passwd.hpp
libs/http/include/suil/http/client/: fileoffload.hpp  form.hpp  memoffload.hpp  request.hpp  response.hpp  session.hpp
libs/http/include/suil/http/server/: admin.hpp  connection.hpp  cors.hpp  crow.hpp  endpoint.hpp  fileserver.hpp  form.hpp  initializer.hpp  jwtauth.hpp  jwtsession.hpp  pgsqlmw.hpp  qs.hpp  rch.hpp  redismw.hpp  request.hpp  response.hpp  router.hpp  routes.hpp  rules.hpp  sysattrs.hpp  trie.hpp  uploaded.hpp  websock.hpp
libs/http/scc/: client.scc  jwt.scc  route.scc  server.scc
libs/http/src/: common.cpp  cookie.cpp  jwt.cpp  offload.cpp  parser.cpp  passwd.cpp
libs/http/src/client/: fileoffload.cpp  form.cpp  memoffload.cpp  request.cpp  response.cpp  session.cpp
libs/http/src/llhttp/: api.c  http.c  llhttp.c
libs/http/src/server/: admin.cpp  connection.cpp  cors.cpp  endpoint.cpp  form.cpp  fserver.cpp  initializer.cpp  jwtauth.cpp  jwtsession.cpp  pgsqlmw.cpp  qs.cpp  redismw.cpp  request.cpp  response.cpp  router.cpp  routes.cpp  rules.cpp  sysattrs.cpp  trie.cpp  uploaded.cpp  websock.cpp
libs/http/test/: main.cpp
libs/http/tfb/benchmark/: Developer.cmake
libs/http/tfb/benchmark/src/: main.cpp
libs/network/: CMakeLists.txt
libs/network/example/: .cmake
libs/network/example/smtp/: main.cpp
libs/network/example/zmq/: main.cpp
libs/network/include/suil/net/: chunk.hpp  email.hpp  server.hpp  socket.hpp  ssl.hpp  tcp.hpp  unix.hpp
libs/network/include/suil/net/smtp/: auth.hpp  client.hpp  command.hpp  common.hpp  context.hpp  protocol.hpp  response.hpp  server.hpp  session.hpp
libs/network/include/suil/net/zmq/: common.hpp  context.hpp  message.hpp  monitor.hpp  operators.hpp  patterns.hpp  socket.hpp
libs/network/scc/: config.scc  symbols.scc
libs/network/src/: chunk.cpp  email.cpp  server.cpp  socket.cpp  ssl.cpp  tcp.cpp  unix.cpp
libs/network/src/smtp/: client.cpp  context.cpp  protocol.cpp  server.cpp  session.cpp  utils.cpp
libs/network/src/zmq/: bindop.cpp  connectop.cpp  context.cpp  message.cpp  monitor.cpp  monitorop.cpp  pubsub.cpp  receiveop.cpp  sendop.cpp  socket.cpp
libs/network/test/: main.cpp
libs/rpc/: CMakeLists.txt
libs/rpc/generator/: .cmake  jrpc.cpp  rpc.cpp  rpc.hpp  srpc.cpp
libs/rpc/generator/example/: kvstore.cpp  kvstore.hpp  kvstore.scc  main.cpp
libs/rpc/include/suil/rpc/: client.hpp  io.hpp  server.hpp
libs/rpc/include/suil/rpc/json/: client.hpp  common.hpp  connection.hpp  context.hpp  server.hpp
libs/rpc/include/suil/rpc/srpc/: client.hpp  common.hpp  connection.hpp  context.hpp  server.hpp
libs/rpc/scc/: common.scc  json.scc  wire.scc
libs/rpc/src/: client.cpp  suilrpc.cpp
libs/rpc/src/json/: client.cpp  connection.cpp  context.cpp
libs/rpc/src/srpc/: client.cpp  connection.cpp  context.cpp
libs/sawtooth/: CMakeLists.txt
libs/sawtooth/example/: Examples.cmake
libs/sawtooth/example/intkey/: main.cpp  tp.cpp  tp.hpp
libs/sawtooth/example/intkey/cli/: app.cpp  app.hpp  main.cpp
libs/sawtooth/include/suil/sawtooth/: address.hpp  client.hpp  dispatcher.hpp  events.hpp  gstate.hpp  message.hpp  processor.hpp  rest.hpp  stream.hpp  tp.hpp  transaction.hpp  wallet.hpp
libs/sawtooth/protos/: Protos.cmake  authorization.proto  batch.proto  block.proto  block_info.proto  client_batch.proto  client_batch_submit.proto  client_block.proto  client_event.proto  client_list_control.proto  client_peers.proto  client_receipt.proto  client_state.proto  client_transaction.proto  events.proto  genesis.proto  identity.proto  merkle.proto  network.proto  processor.proto  setting.proto  state_context.proto  transaction.proto  transaction_receipt.proto  validator.proto
libs/sawtooth/scc/: sawtooth.scc
libs/sawtooth/src/: address.cpp  client.cpp  dispatcher.cpp  events.cpp  gstate.cpp  message.cpp  processor.cpp  rest.cpp  stream.cpp  tp.cpp  transaction.cpp  wallet.cpp
libs/sawtooth/src/stw/: main.cpp  stw.cpp  stw.hpp
(+52 files in other folders)
